# eldenring-bot

./: .gitignore  LICENSE  README.md  bosses.json  build.py  build.spec  pyproject.toml  rebuild.ps1  rebuild.sh  requirements.txt
.github/workflows/: build.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-watcher-core/: 01-01-SUMMARY.md  01-02-PLAN.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-07-PLAN.md  01-CONTEXT.md  01-RESEARCH.md
.planning/phases/02-event-pipeline/: 02-01-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-discord-notifications-and-betting/: 03-01-PLAN.md  03-03-PLAN.md  03-CONTEXT.md  03-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
tests/: conftest.py  test_detectors.py  test_enemy_felled.py  test_http_client.py  test_integration.py  test_state_machine.py  test_watcher_events.py
watcher/: __init__.py  capture.py  config.py  event_queue.py  http_client.py  log_window.py  logger.py  main.py  paths.py  process_monitor.py  state_machine.py  tray.py  updater.py  watcher.py
watcher/assets/: boss_names.json
watcher/detectors/: __init__.py  boss_name.py  coop.py  enemy_felled.py  health_bar.py  you_died.py
(+42 files in other folders)
