[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "elden-ring-watcher"
version = "1.0.1"
description = "Automatically detect boss encounters in Elden Ring and report events to a remote server"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
elden-watcher = "watcher.main:main"

[tool.setuptools.packages.find]
include = ["watcher*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
